[gd_scene load_steps=4 format=3 uid="uid://cd8vqv47fuao"]

[ext_resource type="Script" path="res://scenes/npc_dialog.gd" id="1_b1glf"]
[ext_resource type="PackedScene" uid="uid://bdu4k02d8wnqa" path="res://scenes/dialog.tscn" id="2_5dv7v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_osy14"]
radius = 30.0

[node name="NPCDialog" type="Node2D"]
script = ExtResource("1_b1glf")

[node name="ChatArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatArea"]
shape = SubResource("CircleShape2D_osy14")

[node name="Dialog" parent="." instance=ExtResource("2_5dv7v")]

[connection signal="body_entered" from="ChatArea" to="." method="_on_chat_area_body_entered"]
[connection signal="body_exited" from="ChatArea" to="." method="_on_chat_area_body_exited"]
[connection signal="dialog_finished" from="Dialog" to="." method="_on_dialog_dialog_finished"]
[connection signal="dialog_started" from="Dialog" to="." method="_on_dialog_dialog_started"]
